--- a/src/components/Header/components/ContentBlock/ContentBlock.module.scss
+++ b/src/components/Header/components/ContentBlock/ContentBlock.module.scss
@@ -1,12 +1,19 @@
-.block {
+.container {
+  position: relative;
+  margin-right: 42px;
+  justify-content: space-between;
+}
+
+.blockLeft {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
 .title {
+  position: relative;
   margin-bottom: 32px;
-  max-width: 580px;
+  max-width: 900px;
   text-align: left;
   font-size: 50px;
   font-style: normal;
@@ -15,12 +22,25 @@
   text-transform: uppercase;
   color: #FFFFFF;
   font-family: 'Prata';
+  z-index: 2;
 }
 
 .slogan {
+  text-align: left;
+  max-width: 700px;
   font-size: 23px;
   font-style: normal;
   font-weight: 400;
   line-height: 164.9%;
   color: #FFFFFF;
+}
+
+.blockRight {
+  position: absolute;
+  right: -281px;
+  bottom: 0;
+  width: 480px;
+  height: 651px;
+  background-image: url("../../../../assets/img/hair_back2.2.png");
+  background-repeat: no-repeat;
 }
