--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -52,3 +52,8 @@ body {
 picture {
   font-size: 0;
 }
+
+.Mui-selected {
+  background-color: rgba(234, 164, 164, 0.25) !important;
+  color: #eaa4a4 !important;
+}
