--- a/src/components/MoreServices/MoreServices.module.scss
+++ b/src/components/MoreServices/MoreServices.module.scss
@@ -177,5 +177,65 @@
       color: gray !important;
     }
   }
+  &__advTextMaster {
+    display: inline-block;
+    margin-bottom: 12px;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 180%;
+    color: #1D1D1A;
+  }
+  &__price {
+    display: block;
+    font-family: 'Prata';
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    color: #eaa4a4;
+  }
+  &__advText {
+    display: inline-block;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    color: #1D1D1A;
+  }
+  &__blockPrice {
+    padding: 5px 0;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .block {
+    padding: 32px 60px;
+  }
+
+  .iconBackLine {
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .serviceSection {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .leftSide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .blockImg {
+    margin-right: 0;
+  }
+  .listServices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
