--- a/src/UI/SignUpBtn/SignUpBtn.module.scss
+++ b/src/UI/SignUpBtn/SignUpBtn.module.scss
@@ -8,6 +8,7 @@
   letter-spacing: 1.25px;
   text-transform: uppercase;
   transition: color .2s ease-in-out;
+  z-index: 3;
   svg {
     path {
       transition: stroke .2s ease-in-out;
@@ -74,5 +75,11 @@
     svg {
       margin-right: 15px;
     }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .btn {
+   transform: scale(.6);
   }
 }
