--- a/src/components/OrderCall/OrderCall.module.scss
+++ b/src/components/OrderCall/OrderCall.module.scss
@@ -113,3 +113,28 @@
     }
   }
 }
+@media screen and (max-width: 660px) {
+  .title {
+    font-size: 32px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+  .block {
+    &__leftBlock {
+      flex-basis: 95%;
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .block {
+    padding: 20px 20px;
+  }
+  .title {
+    font-size: 26px;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+}
