feat - burger. finish

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -57,3 +57,8 @@ picture {
   background-color: rgba(234, 164, 164, 0.25) !important;
   color: #eaa4a4 !important;
 }
+
+.MuiPaper-elevation16 {
+  padding: 80px 20px;
+  background-color: #696765 !important;
+}
