--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .block {
   width: 100%;
   padding: 0 240px;
-  background: url("../../assets/img/fon_header.jpg") no-repeat;
+  background: url("../../assets/img/fon_header.webp") no-repeat;
   background-size: auto;
 }
 
