fix - fix img, finish

--- a/src/components/Header/components/ContentBlock/ContentBlock.module.scss
+++ b/src/components/Header/components/ContentBlock/ContentBlock.module.scss
@@ -63,7 +63,7 @@
   .blockRight {
     width: 344px;
     height: 490px;
-    background-image: url("../../../../assets/img/hair_back2.2_mobile.png");
+    background-image: url("../../../../assets/img/hair_back2.2_mobile.webp");
   }
 }
 
@@ -78,7 +78,6 @@
   .blockRight {
     width: 344px;
     height: 490px;
-    background-image: url("../../../../assets/img/hair_back2.2_mobile.png");
   }
 }
 
@@ -97,6 +96,5 @@
     width: 200px;
     height: 453px;
     right: -20px;
-    background-image: url("../../../../assets/img/hair_back2.2_mobile.png");
   }
 }
