--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -16,7 +16,7 @@
     position: absolute;
     width: 700px;
     height: 384px;
-    background-color: #e1bdb5;
+    background-color: #eaa4a4;
     bottom: -70px;
     left: -86px;
     z-index: -1;
@@ -48,7 +48,7 @@
   color: #312C38;
   z-index: 3;
   span {
-    color: #e1bdb5;
+    color: #eaa4a4;
     position: relative;
   };
 }
@@ -172,7 +172,7 @@
       position: absolute;
       width: 350px;
       height: 180px;
-      background-color: #e1bdb5;
+      background-color: #eaa4a4;
       bottom: -50px;
       left: -20px;
       z-index: -1;
