--- a/src/UI/SignUpBtn/SignUpBtn.module.scss
+++ b/src/UI/SignUpBtn/SignUpBtn.module.scss
@@ -18,7 +18,7 @@
     color: #1D1D1A;
     svg {
       path {
-        stroke: #B68C6E;
+        stroke: #c59db7;
       }
     }
     &:hover {
@@ -68,7 +68,7 @@
     &__pink {
       svg {
         path {
-          fill: #B68C6E;
+          fill: #c59db7;
         }
       }
     }
