--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,7 +8,7 @@
 }
 
 .leftSide {
-    box-shadow: 0 0 25px 15px #eaa4a4;
+    box-shadow: 0 0 25px 15px #c59db7;
   &__map {
     width: 650px;
     height: 420px;
@@ -137,7 +137,7 @@
 
 .copy {
   padding: 2px;
-  background-color: #eaa4a4;
+  background-color: #c59db7;
   color: #FFFFFF;
   text-align: center;
   font-size: 16px;
