--- a/src/components/OrderCall/OrderCall.module.scss
+++ b/src/components/OrderCall/OrderCall.module.scss
@@ -25,7 +25,7 @@
       left: -10%;
       width: 120%;
       height: 115%;
-      background-color: #eaa4a4;
+      background-color: #c59db7;
       z-index: 1;
     }
   }
@@ -41,7 +41,7 @@
   color: #FFFFFF;
   margin-bottom: 12px;
   span {
-    color: #eaa4a4;
+    color: #c59db7;
   }
 }
 
@@ -52,7 +52,7 @@
   font-weight: 600;
   line-height: 128.5%; /* 64.25px */
   letter-spacing: 1.5px;
-  color: #eaa4a4;
+  color: #c59db7;
   margin-bottom: 12px;
 }
 
@@ -74,7 +74,7 @@
   font-weight: 400;
   line-height: 128.5%; /* 64.25px */
   letter-spacing: 1.1px;
-  color: #eaa4a4 !important;
+  color: #c59db7 !important;
   &:hover {
     color: #FFFFFF !important;
   }
@@ -105,7 +105,7 @@
   }
   .btn {
     &:hover {
-      color: #eaa4a4 !important;
+      color: #c59db7 !important;
     }
   }
 }
