--- a/src/components/Header/components/InfoBlock/InfoBlock.module.scss
+++ b/src/components/Header/components/InfoBlock/InfoBlock.module.scss
@@ -130,7 +130,7 @@
   &__mapBlock {
     width: 300px;
     height: 380px;
-    box-shadow: 0 0 20px 10px #eaa4a4;
+    box-shadow: 0 0 20px 10px #c59db7;
   }
 }
 
