--- a/src/components/MoreServices/MoreServices.module.scss
+++ b/src/components/MoreServices/MoreServices.module.scss
@@ -18,7 +18,7 @@
   position: relative;
   margin-right: auto;
   border-radius: 10px;
-  box-shadow: 0 0 20px 10px #eaa4a4;
+  box-shadow: 0 0 20px 10px #c59db7;
   z-index: 2;
 }
 
@@ -40,7 +40,7 @@
     content: '';
     width: 100%;
     height: 1px;
-    background-color: #eaa4a4;
+    background-color: #c59db7;
     bottom: -24px;
     left: 0;
   }
@@ -82,7 +82,7 @@
   line-height: 180%;
   color: #FFFFFF;
   span {
-    color: #eaa4a4;
+    color: #c59db7;
   }
 }
 
@@ -93,7 +93,7 @@
   line-height: 140%;
   text-transform: uppercase;
   transition: .2s ease-in-out color;
-  color: #eaa4a4;
+  color: #c59db7;
   &:hover {
     color: #e1bdb5;
   }
@@ -107,7 +107,7 @@
   margin-bottom: 48px;
   img {
     border-radius: 10px;
-    box-shadow: 0 0 20px 10px #eaa4a4;
+    box-shadow: 0 0 20px 10px #c59db7;
   }
 }
 
@@ -153,7 +153,7 @@
     text-transform: uppercase;
     font-family: 'Prata' !important;
     span {
-      color: #eaa4a4;
+      color: #c59db7;
     }
   }
   &__modalSubtitle {
@@ -185,7 +185,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
-    color: #eaa4a4;
+    color: #c59db7;
   }
   &__advText {
     display: inline-block;
