fix -  debug and new fav ico

--- a/src/components/Header/components/InfoBlock/InfoBlock.module.scss
+++ b/src/components/Header/components/InfoBlock/InfoBlock.module.scss
@@ -15,8 +15,10 @@
     display: flex;
     align-items: center;
     &__item {
+      position: relative;
       margin-right: 24px;
       a {
+        position: relative;
         svg {
           path {
            transition: .2s ease-in-out fill;
