--- a/src/components/MoreServices/MoreServices.module.scss
+++ b/src/components/MoreServices/MoreServices.module.scss
@@ -220,6 +220,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right: 0;
   }
   .blockImg {
     margin-right: 0;
