--- a/src/components/Training/Training.module.scss
+++ b/src/components/Training/Training.module.scss
@@ -25,7 +25,7 @@
       height: 1px;
       bottom: -12px;
       left: 0;
-      background-color: #eaa4a4;
+      background-color: #c59db7;
     }
   }
   &__subtitle {
